// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor styles should render with custom styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-skip-ink: auto;
  border: 0;
  outline: none;
  background: none;
  padding: 0;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
  color: var(--cui-fg-accent);
  border-radius: 8px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  color: rebeccapurple;
}

.circuit-0:hover {
  color: var(--cui-fg-accent-hovered);
  cursor: pointer;
}

.circuit-0:active {
  color: var(--cui-fg-accent-pressed);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

<div>
  <a
    class="circuit-0"
    href="https://sumup.com"
  >
    Anchor
  </a>
</div>
`;

exports[`Anchor styles should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-skip-ink: auto;
  border: 0;
  outline: none;
  background: none;
  padding: 0;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
  color: var(--cui-fg-accent);
  border-radius: 8px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
}

.circuit-0:hover {
  color: var(--cui-fg-accent-hovered);
  cursor: pointer;
}

.circuit-0:active {
  color: var(--cui-fg-accent-pressed);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

<div>
  <a
    class="circuit-0"
    href="https://sumup.com"
  >
    Anchor
  </a>
</div>
`;
